--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     </head>
     <body>
     	<img src="worker.jpg" alt="maintenance">
-    	<br>
-    	<br>
-    	<h1>Page is under maintenance</h1>
+       	<h1>Site is under maintenance</h1>
     	<h3>We will be up shortly</h3>
     </body>
